<resources>
    <string name="app_name">Practice_10</string>

    <string name="btn_cancel">Отмена</string>
    <string name="btn_cancel2">Нет, так нет</string>
    <string name="btn_login">Авторизоваться</string>
    <string name="btn_ok">ОК</string>
    <string name="btn_splash">Go to SplashActivity</string>
    <string name="congratulation">Congratulation</string>
    <string name="content_description">лого</string>
    <string name="error_login">Ошибка ввода логина</string>
    <string name="error_pass">Ошибка ввода пароля</string>
    <string name="hint_login">Введите логин</string>
    <string name="hint_name">Введите имя</string>
    <string name="hint_pass">Введите пароль</string>
    <string name="hint_surname">Введите фамилию</string>
    <string name="img">картинка</string>
    <string name="log_out">Выйти</string>
    <string name="registration">Регистрация</string>
    <string name="registration2"><u>Регистрация</u></string>
    <string name="save_data">Сохранение логина и пароля</string>
    <string name="toast">пароль должен быть длиннее</string>
    <string name="toast3">что-то не так</string>
    <string name="tv_forget">Очистить</string>
    <string name="tv_signup">Регистрация</string>
    <string name="txt">А у нас тут начинается приложение</string>

</resources>
