<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp"
    android:orientation="vertical"
    android:background="@color/colorWhite">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:text="@string/registration2"
        android:textColor="@color/colorBlue"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_weight="1"/>

    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:textSize="15sp"
        android:inputType="text"
        android:textColorHint="@color/colorGrey"
        android:hint="@string/hint_name" />

    <EditText
        android:id="@+id/etSurName"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:textSize="15sp"
        android:inputType="text"
        android:textColorHint="@color/colorGrey"
        android:hint="@string/hint_surname" />

    <EditText
        android:id="@+id/etLog"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:textSize="15sp"
        android:inputType="text"
        android:textColorHint="@color/colorGrey"
        android:hint="@string/hint_login" />

    <EditText
        android:id="@+id/etPas"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:textSize="15sp"
        android:inputType="numberPassword"
        android:textColorHint="@color/colorGrey"
        android:hint="@string/hint_pass" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <Button
            android:id="@+id/btn_yes"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_marginRight="10dp"
            android:background="@color/colorBlue"
            android:text="@string/btn_ok"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            tools:ignore="ButtonStyle"
            android:clickable="true"
            android:focusable="true" />

        <Button
            android:id="@+id/btn_no"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_marginLeft="10dp"
            android:background="@color/colorBlue"
            android:text="@string/btn_cancel"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            tools:ignore="ButtonStyle"
            android:clickable="true"
            android:focusable="true" />
    </LinearLayout>

</LinearLayout>