<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg_image"
    tools:context="studio.coon.practice_10.MainActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/logo"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"/>

    <EditText
        android:id="@+id/etLogin"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:textSize="24sp"
        android:inputType="text"
        android:textColorHint="@color/colorGrey"
        android:hint="@string/hint_login" />

    <EditText
        android:id="@+id/etPass"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:textSize="24sp"
        android:inputType="numberPassword"
        android:textColorHint="@color/colorGrey"
        android:hint="@string/hint_pass"/>

    <CheckBox
        android:id="@+id/chkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="-20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/save_data"
        android:textColor="@color/colorGrey"
        android:theme="@style/MyCheckBox" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/btn_login"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="bottom|center"
        android:layout_marginBottom="10dp">

        <TextView
            android:id="@+id/tvSignup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_signup"
            android:textSize="12sp"
            android:textColor="@color/colorGrey"
            android:layout_marginRight="10dp"/>

        <TextView
            android:id="@+id/tvForget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_forget"
            android:textSize="12sp"
            android:textColor="@color/colorGrey"
            android:layout_marginLeft="10dp"/>

    </LinearLayout>


</LinearLayout>
